--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+.appContainerTwo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
