--- a/src/components/Sample/Sample.css
+++ b/src/components/Sample/Sample.css
@@ -1,27 +1,15 @@
 .sample {
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-top: 100px;
-}
-
-.title {
-    width: 100%;
-    height: 50px;
-    margin: 0px;
-    text-align: center;
-    font-family: 'Roboto Slab', serif;
-}
-
-.containerOneSample {
+    margin-top: 50px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
 
-.sampleText {
-    width: 250px;
-    margin-left: 20px;
-    font-size: 18px;
-    font-family: 'Roboto Slab', serif;
+.sampleImage {
+    max-height: 700px;
+    max-width: 1000px;
+}
+
+.sample:hover {
+    cursor: pointer;
 }
