--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,5 @@
 .appContainerTwo {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around
 }
